<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:elevation="5dp"
    tools:context=".MainActivity3">

  <Button
      android:id="@+id/btnquick"
      android:layout_width="234dp"
      android:layout_height="229dp"
      android:background="@drawable/imm"
      android:shadowColor="#514E4E"
      android:text="QUICK HELP!!"
      android:textColor="#FF0000"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.753" />

  <Button
      android:id="@+id/button4"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="154dp"
      android:layout_height="84dp"
      android:text="@string/call_police"
      android:textColor="#FFFFFF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.066"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.377" />

  <Button
      android:id="@+id/button7"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="154dp"
      android:layout_height="84dp"
      android:text="@string/call_ambulance"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.853"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.377" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/roboto"
      android:text="@string/hi"
      android:textColor="@color/black"
      android:textSize="35sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.099"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.08" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="115dp"
      android:layout_height="41dp"
      android:fontFamily="@font/roboto"
      android:hint="@string/name"
      android:textColor="@color/black"
      android:textSize="28sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.32"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.087" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="13dp"
      android:fontFamily="@font/roboto"
      android:gravity="center"
      android:text="@string/about"
      android:textColor="@color/black"
      android:textSize="12sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.991" />

  <TextView
      android:id="@+id/viewreponce"
      android:layout_width="184dp"
      android:layout_height="43dp"
      android:gravity="center"
      android:text="@string/view_responces"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.961" />
</androidx.constraintlayout.widget.ConstraintLayout>