<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp"
    android:scrollbarSize="8sp"
    tools:context=".MainActivity4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.risvana.DemoUSERlogin.MainActivity4">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"

            android:layout_marginTop="117dp"
            android:maxWidth="300dp"

            android:minWidth="300dp"
            android:minHeight="35dp"
            android:text="@string/alert_id"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editText4"
            android:layout_width="184dp"
            android:layout_height="46dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"


            android:layout_alignParentEnd="true"
            android:layout_marginStart="131dp"
            android:layout_marginTop="-40dp"
            android:layout_marginEnd="34dp"
            android:background="@drawable/activity1button"
            android:gravity="center"
            android:hint="@string/alert_id_here"
            android:minWidth="400dp"
            android:minHeight="35dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText4"
            android:layout_alignParentStart="true"

            android:layout_alignParentEnd="true"

            android:layout_marginTop="25dp"
            android:layout_marginEnd="86dp"
            android:minWidth="300dp"
            android:minHeight="35dp"
            android:text="type of incident"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/black"
            android:minWidth="400dp"
            android:minHeight="35dp"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText5"
            android:layout_alignParentStart="true"

            android:minWidth="300dp"
            android:minHeight="35dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/black"
            android:minWidth="400dp"
            android:minHeight="35dp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText7"
            android:layout_alignParentStart="true"

            android:minWidth="300dp"
            android:minHeight="35dp"
            android:text="name of the victim"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/black"
            android:minWidth="400dp"
            android:minHeight="35dp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText8"
            android:layout_alignParentStart="true"

            android:minWidth="300dp"
            android:minHeight="35dp"

            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/black"
            android:minWidth="400dp"
            android:minHeight="35dp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText9"
            android:layout_alignParentStart="true"

            android:minWidth="300dp"

            android:minHeight="35dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"

            android:layout_alignParentStart="true"
            android:backgroundTint="@color/black"
            android:inputType="phone"
            android:minWidth="400dp"
            android:minHeight="35dp"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText10"
            android:layout_alignParentStart="true"
            android:minWidth="300dp"
            android:minHeight="35dp"

            android:text="address"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:minWidth="400dp"
            android:minHeight="35dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText12"
            android:layout_alignParentStart="true"
            android:minWidth="300dp"
            android:minHeight="35dp"
            android:text="pincode"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:inputType="phone"
            android:minWidth="400dp"
            android:minHeight="35dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="28dp"
            android:minWidth="150dp"
            android:minHeight="40dp"
            android:text="@string/registeract4"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="76dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="79dp"
            android:layout_marginBottom="55dp"
            android:gravity="center_horizontal"
            android:text="@string/details_of_the_victim"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:elevation="20dp"
            android:shadowColor="@color/black"/>


    </RelativeLayout>
</ScrollView>
